--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                             <div>
                                 <p class="text-sm text-gray-500">Advance Payment</p>
-                                <p class="font-semibold">1.5 lakh PKR <span class="text-xs text-red-500">(Non-refundable in case visa rejection)</span></p>
+                                <p class="font-semibold">1.5 lakh PKR </p>
                             </div>
                         </div>
                         
