--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="country-card bg-white rounded-lg shadow-md overflow-hidden border border-gray-100">
                     <div class="bg-blue-600 text-white py-3 px-6">
-                        <h3 class="text-xl font-bold">Romania - Student Visa</h3>
+                        <h3 class="text-xl font-bold">Romania & Georgia - Student Visa</h3>
                     </div>
                     <div class="p-6">
                         <div class="grid grid-cols-2 gap-4 mb-6">
@@ -99,7 +99,7 @@
                             </div>
                             <div>
                                 <p class="text-sm text-gray-500">Advance Payment</p>
-                                <p class="font-semibold">1.5 lakh PKR </p>
+                                <p class="font-semibold">1.5 lakh PKR <span class="text-xs text-red-500">(Registration, appointment ,insurance etc )</span></p>
                             </div>
                         </div>
                         
