--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             
             <div class="flex flex-col md:flex-row gap-12">
                 <div class="md:w-1/2">
-                    <form id="contact-form" action="https://formspree.io/f/mzzvqzev" method="POST" class="bg-white p-8 rounded-lg shadow-sm">
+                    <form id="contact-form" action="https://formspree.io/f/xvgqnkre" method="POST" class="bg-white p-8 rounded-lg shadow-sm">
                         <div class="mb-6">
                             <label for="name" class="block text-gray-700 font-medium mb-2">Full Name</label>
                             <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" required>
