--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
             <nav class="hidden md:flex space-x-8">
                 <a href="index.html" class="nav-link text-gray-300 hover:text-white font-medium">Home</a>
                 <a href="opportunities.html" class="nav-link text-gray-300 hover:text-white font-medium">Opportunities</a>
+                <a href="apply.html" class="nav-link text-gray-300 hover:text-white font-medium">Apply Now</a>
                 <a href="about.html" class="nav-link text-gray-300 hover:text-white font-medium">About Us</a>
                 <a href="contact.html" class="nav-link active-nav text-white font-medium">Contact</a>
             </nav>
