--- a/apply.html
+++ b/apply.html
@@ -72,7 +72,7 @@
                 <input type="hidden" id="program-selected" name="program" value="">
 
                 <!-- Application Form -->
-                <form action="https://formspree.io/f/mzzvqzev" method="POST" class="space-y-6">
+                <form action="https://formspree.io/f/xvgqnkre" method="POST" class="space-y-6">
                     <!-- Personal Information Section -->
                     <div class="glass-effect p-6 rounded-lg">
                         <h3 class="text-xl font-semibold mb-4 text-blue-400 flex items-center">
@@ -283,4 +283,5 @@
         });
     </script>
 </body>
+
 </html>
