--- a/apply.html
+++ b/apply.html
@@ -133,6 +133,7 @@
                                     <option value="Romania - Student Visa">Romania - Student Visa</option>
                                     <option value="Germany - Work Permit">Germany - Work Permit</option>
                                     <option value="Turkey - Welder Visa">Turkey - Welder Visa</option>
+                                    <option value="Turkey - Welder Visa">Apply For Visit</option>
                                     <option value="Other">Other (Specify in Message)</option>
                                 </select>
                             </div>
@@ -286,4 +287,5 @@
 </body>
 
 </html>
+
 
