--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <!-- Standard favicon (works in 99% of browsers) -->
-<link rel="icon" type="image/png" href="./favicon-32x32.png">
+<link rel="icon" type="image/png" href="">
 <!-- Fallback for older browsers -->
-<link rel="shortcut icon" href="./favicon.ico">
+<link rel="shortcut icon" href="">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trimat Consultancy - Overseas Education & Work Experts</title>
