--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 <body class="text-gray-100">
     <header class="glass-effect sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <div class="flex items-center">
+            <a href="index.html" class="flex items-center">
                 <div class="bg-blue-600 text-white p-2 rounded-lg mr-3 shadow-lg">
                     <i class="fas fa-globe-americas text-2xl"></i>
                 </div>
                 <h1 class="text-2xl font-bold text-white tracking-wider">Trimat<span class="text-blue-400">Consultancy</span></h1>
-            </div>
+            </a>
             
             <nav class="hidden md:flex space-x-8">
                 <a href="index.html" class="nav-link active-nav text-white font-medium">Home</a>
