--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <div class="flex flex-col space-y-4 p-6">
                 <a href="index.html" class="text-gray-200 hover:text-white font-medium">Home</a>
                 <a href="opportunities.html" class="text-gray-200 hover:text-white">Opportunities</a>
+                <a href="apply.html" class="nav-link text-gray-300 hover:text-white font-medium">Apply Now</a>
                 <a href="about.html" class="text-gray-200 hover:text-white">About Us</a>
                 <a href="contact.html" class="text-gray-200 hover:text-white">Contact</a>
             </div>
