--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-    <!-- Standard favicon (works in 99% of browsers) -->
-<!-- <link rel="icon" type="image/png" href=""/> -->
-<!-- Fallback for older browsers -->
-<!-- <link rel="shortcut icon" href=""> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trimat Consultancy - Overseas Education & Work Experts</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+
+    <title>Visa Services in Peshawar for Canada, Europe & USA | Trimat Consultancy</title>
+    <meta name="description" content="Trimat Consultancy in Peshawar offers expert visa services for Canada, USA, Romania, and Europe at minimum charges. Your trusted partner for study, work, and visit visas.">
+    <link rel="canonical" href="https://www.yourwebsite.com/" /> <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.yourwebsite.com/"> <meta property="og:title" content="Visa Services in Peshawar for Canada, Europe & USA | Trimat Consultancy">
+    <meta property="og:description" content="Trimat Consultancy offers expert visa services for Canada, USA, Romania, and Europe at minimum charges.">
+    <meta property="og:image" content="https://www.yourwebsite.com/images/social-preview.jpg"> <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.yourwebsite.com/"> <meta property="twitter:title" content="Visa Services in Peshawar for Canada, Europe & USA | Trimat Consultancy">
+    <meta property="twitter:description" content="Trimat Consultancy offers expert visa services for Canada, USA, Romania, and Europe at minimum charges.">
+    <meta property="twitter:image" content="https://www.yourwebsite.com/images/social-preview.jpg"> <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
