--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Visa Services in Peshawar for Canada, Europe & USA | Trimat Consultancy</title>
+    <title>Visa Services in Pakistan for Germany , Europe & USA | Trimat Consultancy</title>
     <meta name="description" content="Trimat Consultancy offers expert visa services for Canada, USA, Romania, and Europe at minimum charges. Your trusted partner for study, work, and visit visas.">
     <link rel="canonical" href="https://www.trimatconsultancy.services/" /> <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trimatconsultancy.services/"> <meta property="og:title" content="Visa Services in Peshawar for Canada, Europe & USA | Trimat Consultancy">
