--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
 
     <title>Visa Services in Pakistan for Germany , Europe & USA | Trimat Consultancy</title>
     <meta name="description" content="Trimat Consultancy offers expert visa services for Canada, USA, Romania, and Europe at minimum charges. Your trusted partner for study, work, and visit visas.">
+    <meta name="keywords" content="
+Germany visa consultant, Germany student visa, Germany work visa, Germany study visa Pakistan, Germany immigration services, Germany visa help Peshawar,
+Romania visa consultant, Romania student visa, Romania work visa, Romania immigration consultant Pakistan, Romania visa services,
+Netherlands visa consultant, Netherlands student visa, Netherlands work visa, Netherlands immigration services Pakistan, Netherlands visa advice,
+Hungary visa consultant, Hungary student visa, Hungary work visa, Hungary immigration services Pakistan, Hungary visa expert,
+Albania visa consultant, Albania student visa, Albania work visa, Albania immigration services Pakistan, Albania visa advice,
+Canada visa consultant, Canada study visa, Canada work visa, Canada immigration services Pakistan, Canada visa assistance,
+USA visa consultant, USA student visa, USA work visa, USA immigration services Pakistan, USA visa guidance,
+UK visa consultant Pakistan, UK student visa Peshawar, UK work visa consultant, UK tourist visa Pakistan, UK spouse visa services,
+Australia visa consultant Pakistan, Australia student visa Peshawar, Australia work visa Pakistan, Australia tourist visa consultant, Australia PR visa Pakistan,
+New Zealand visa consultant, New Zealand student visa Pakistan, New Zealand work visa consultant, New Zealand tourist visa Pakistan, New Zealand spouse visa consultant,
+Malaysia student visa Pakistan, Malaysia work visa consultant, Malaysia tourist visa Pakistan,
+Singapore student visa Pakistan, Singapore work visa consultant, Singapore tourist visa consultant,
+China student visa Pakistan, China work visa consultant, China tourist visa consultant,
+South Korea student visa Pakistan, South Korea work visa consultant, South Korea tourist visa consultant,
+Japan student visa Pakistan, Japan work visa consultant, Japan tourist visa consultant,
+Dubai work visa consultant, UAE job visa consultant, Qatar work visa Pakistan, Saudi Arabia work visa consultant, Kuwait job visa consultant, Oman work visa Pakistan, Bahrain work visa consultant,
+Study abroad consultant Peshawar, Work abroad consultant Pakistan, Visa consultancy Peshawar, Best visa consultant Peshawar, Trusted visa consultant Pakistan,
+Affordable visa consultant Peshawar, Transparent visa services Pakistan, Student visa experts Peshawar, Tourist visa consultant Pakistan, Business visa consultant Peshawar,
+Family visa consultant Pakistan, Spouse visa consultant Peshawar, Visitor visa consultant Pakistan, Dependent visa consultant Pakistan,
+PR visa consultant Peshawar, Work permit consultant Peshawar, Skilled migration consultant Pakistan,
+Scholarship consultant Peshawar, IELTS visa consultant Peshawar, PTE visa consultant Pakistan,
+Visa SOP writing services, Visa interview coaching Pakistan, Visa application checklist, Visa documentation Peshawar, Visa medical requirements Pakistan,
+Visa embassy appointments, Visa biometric help Peshawar, Visa refusal appeal consultant, Visa reapplication services, Visa rejection solution Pakistan,
+Visa fast-track service Pakistan, Visa urgent processing Peshawar, Visa approval experts Pakistan,
+Visa documents translation service, Visa attestation service Pakistan, Visa embassy file submission, Visa embassy preparation Peshawar,
+Visa consultancy for students, Visa consultancy for professionals, Visa consultancy for skilled labor, Visa consultancy for families,
+Visa consultancy for migrants, Visa consultancy for visitors, Visa help for Europe countries, Visa help for America countries,
+Visa help for Canada immigration, Visa help for Australia migration, Visa help for UK migration, Visa help for Middle East jobs
+">
     <link rel="canonical" href="https://www.trimatconsultancy.services/" /> <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trimatconsultancy.services/"> <meta property="og:title" content="Visa Services in Peshawar for Canada, Europe & USA | Trimat Consultancy">
     <meta property="og:description" content="Trimat Consultancy offers expert visa services for Canada, USA, Romania, and Europe at minimum charges.">
