--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                                 <i class="fas fa-map-marker-alt text-blue-400 text-xl w-6 text-center mt-1"></i>
                                 <div class="ml-4">
                                     <h3 class="font-bold text-lg">Our Office</h3>
-                                    <p class="text-gray-300">Malak Sardar Plaza, Near UBL Bank,<br>Mardan-Swabi Road, Shewa Adda, Peshawar</p>
+                                    <p class="text-gray-300">Malak Sardar Plaza, Near UBL Bank,<br>Mardan-Swabi Road, Shewa Adda</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -178,3 +178,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
